2015-06-03 Massimo Manghi <mxmanghi@apache.org>
    * doc/rivet.css: changing selector for namespace table as DocBook
    seems not to honor the id attribute anymore
    * doc/xml/request.css: changing the id "namespaces" as class

2015-05-21 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/installation.html: wrong links fixed

2015-05-05 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: New procedures Rivet_PrintErrorMessage and
    Rivet_ExecuteErrorHandler. Error handling generalized and Tcl
    status returned by Tcl_EvalObjEx is propagated by Rivet_ExecuteAndCheck
    to interrupt execution even when an error occurs or abort_page is
    called from a nested template. Flag globals->page_aborting is
    used to prevent error loggin because ::rivet::abort_page is called.
    Therefore globals->page_aborting is reset when a real error occurs
    (closes bug #57501)

2015-04-26 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: changing version to 2.2.3 looking ahead for a
    future release

2015-04-22 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/internals.xml: replaced reference to the old configure.tcl script
    and replaced with up-to-date directions on how to build with the debugger
    using the current autotools based scripts

2015-04-16 Massimo Manghi <mxmanghi@apache.org>
    * docs/xml/install.xml: removed documentation for obsolete
    configure switch --with-apache-version

2015-03-28 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: update installation and configuration examples

2015-03-11 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/internals.xml: Improved paragraph on how to extend mod_rivet
    * src/apache-2/mod_rivet.c: Improper handling of 'HTTP_NOT_FOUND' and
    HTTP_INTERNAL_SERVER_ERROR caused an access to non existing memory (Bug #57686)

2015-02-20 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: installation instructions update 
    * VERSION: new version 2.2.2