@@ -1,3 +1,10 @@
+2015-06-21 Massimo Manghi <mxmanghi@apache.org>
+    * configure.ac: changing version to 2.2.4, definition of config.h
+    variable RIVET_CONFIGURE_CMD carring the configure full command that
+    prepared the build of the module
+    * src/apache-2/mod_rivet.c: Improved readability of code in 
+    Rivet_ChildHandlers. Add RIVET_CONFIGURE_CMD to 'server' array
+
 2015-06-03 Massimo Manghi <mxmanghi@apache.org>
     * doc/rivet.css: changing selector for namespace table as DocBook
     seems not to honor the id attribute anymore
